2014-09-15  Murray Stokely  <mstokely@google.com>

	Address feedback from anonymous reviewers for our Journal of
	Statistical Software submission:
	* src/wrapper_EnumDescriptor.cpp (rprotobuf): Correct the
	  definition of as.list for EnumDescriptors to return a proper list
	  instead of a named vector.
	* man/aslist.Rd: clarify order of returned list for descriptor
	  objects.
	* NAMESPACE: add names as exported method.
	* R/00classes.R (show): Update the default print methods to use
	  cat() with fill=TRUE instead of show() to eliminate the confusing
	  [1] since the classes in RProtoBuf are not vectorized.
	* Make Descriptor and EnumDescriptor objects subsettable with
	  "[[".
	* Add length() method for Descriptor objects.
	* Add names() method for Message, Descriptor, and EnumDescriptor
	  objects.
	* inst/unitTests/runit.enums.R (test.enums): Add test of
	  subsetting an EnumDescriptor object.
	* inst/unitTests/runit.descriptors.R (test.descriptor): Add test
	  for subsetting of descriptor objects.
	* DESCRIPTION (Version): Increment.

2014-04-02  Murray Stokely  <mstokely@google.com>

	Two patches from Karl Millar <kmillar@google.com>:
	* src/S4_classes.h (rprotobuf): Change handling of
	  S4_EnumDescriptor when passed a NULL pointer to just create empty
	  object with empty name and full_name rather than setting to
	  R_NilValue.
	* src/wrapper_EnumDescriptor.cpp (rprotobuf): Change return value
	  of getValue* functions on EnumDescriptor and return an
	  EnumValueDescriptor or R_NilValue on failure.

2014-04-01  Murray Stokely  <mstokely@google.com>

	* tests/runUnitTests.R: Add improved checks to ensure R CMD CHECK
	  fails if there are any errors in the tests, not just failures.

2014-03-25  Dirk Eddelbuettel  <edd@debian.org>

 	* DESCRIPTION (Version): Release 0.4.1

2014-03-24  Murray Stokely  <mstokely@google.com>

	* inst/unitTests/runit.int64.R (test.int64): Check
	  Rcpp:::capabilities() to ensure we have long long support in Rcpp